--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,73 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="utf-8"/>
-    <title>My First Parcel App</title>
-    <link rel="stylesheet" href="styles.css" />
+    <title>Portada</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <script src="../app.js"></script>
+    <script src="../node_modules/lazysizes/lazysizes.min.js" async=""></script>
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <header>
+      <div class="container">
+        <a href="index.html"><img class="lazyload" src="images/tarragona1.jpg" alt="tarragonaciutat" width=100% height="400"></a>
+        <button onclick="buttonFunction()" id="btn">Menú</button>
+        <nav id="nav">
+          <ul>
+            <li><a class="categories" href="visitar.html">Que visitar</a>
+              <ul>
+                <li class="submenu"><a href="tarraco.html">Tarraco</a></li>
+                <li class="submenu"><a href="catedral.html">Catedral</a></li>
+                <li class="submenu"><a href="rambla.html">Rambla nova</a></li>
+              </ul>
+            </li>
+            <li><a href="historia.html">Historia</a></li>
+            <li><a href="links.html">Links</a></li>
+          </ul>
+        </nav>   
+      </div>
+    </header>
+    <main>
+      <p>
+        Tarragona és una ciutat del sud de Catalunya, capital de la comarca del Tarragonès i de la província de Tarragona.
+      </p>
+      <p>
+        Amb una població de 135.436 habitants (2021), és la ciutat més poblada de la comarca del Tarragonès, de la regió del Camp de Tarragona i és la setena ciutat més poblada de Catalunya.
+      </p>
+      <p>
+        La seva ubicació a la riba de la Mediterrània a la Costa Daurada, amb platges d'aigües càlides, així com els seus centres d'esplai i tradició històrica i patrimoni artístic, la converteixen en un centre d'atracció turística important.
+      </p>
+      <p>
+        Fundada al segle iii aC amb el nom de Tàrraco, té un important port de mar i és el centre del Complex Petroquímic de Tarragona, un dels més importants del sud d'Europa. 
+      </p>
+      <p>
+        Els romans la feren capital de la província Tarraconense, motiu pel qual encara conserva notables restes arqueològiques d'aquesta època que han estat declarades Patrimoni de la Humanitat per la Unesco.
+      </p>
+      <div class="video_center"><iframe width="100%" height="315" class="lazyload" src="https://www.youtube.com/embed/0Plv43BSVYg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div> 
+      <p>
+        La capital ha anat creixent a mesura que han anat passant els anys, sense perdre la històrica rivalitat amb la ciutat de Reus, i això ha fet que s'hagin destinat grans quantitats de diners pel Port de Tarragona, un dels més importants del Mediterrani occidental, actualment un pol d'atracció del tarragonins. La creixent modernització de la ciutat, juntament amb l'evolució demogràfica que ha patit Catalunya en els últims anys, han fet que la ciutat disposi d'importants vies de comunicació amb l'exterior, com el Port, l'Estació de Tren (molt a prop del Barri del Serrallo), el Corredor del Mediterrani, la proximitat amb l'Aeroport de Reus i les carreteres que porten a València i a Barcelona.<br>
+        A més, i en part gràcies als propers pols turístics de Salou, Cambrils, La Pineda (Vila-seca), Tamarit, Altafulla, PortAventura i als futurs BCN World i FerrariLand, i al fet de tenir importants vestigis culturals i històrics, es calcula que la ciutat rep, en les èpoques de temporada alta, més de 2 milions de visitants. Això ha comportat una important entrada de diners i una significativa pujada de la popularitat, però sense cap mena de dubte, el fet que el 2017 Tarragona aculli el XXVIII Jocs Mediterranis, aportarà molta importància a la ciutat, a més de grans infraestructures (esportives, comunicatives, etc) i un gran llegat històric.<br>
+        Actualment, la ciutat disposa del Diari de Tarragona, i de diverses emissions de televisió i ràdio.<br>
+        El 2018 la ciutat va acollir els XVIII Jocs Mediterranis, un any més tard del previst, per culpa de la desorganització i el manca de finances, derivada del retard en la formació del govern de l'Estat que han fet impossible acabar les infraestructures necessàries a temps. L'èxit de l'esdeveniment va ser mitigat.
+      </p>
+    </main>
+    <footer>
+      <div class="grid-container">
+        <div class="grid-item">
+          <p>Treball fet per Genís Pijuan Casanova</p>
+          <p>Assignatura de Eines HTML i CSS aula 1</p>
+          <p>Professora Mariona Roca Ros</p>
+        </div>
+        <div  class="grid-item">
+          <p>Fonts d'informació</p>
+          <p><a href="https://ca.wikipedia.org/wiki/Tarragona">Wikipedia de Tarragona</a></p>
+          <p></p><a href="https://ca.wikipedia.org/wiki/Conjunt_arqueol%C3%B2gic_de_T%C3%A0rraco">Tarraco</a></p>
+          <p></p><a href="https://ca.wikipedia.org/wiki/Rambla_Nova_de_Tarragona">Rambla de Tarragona</a></p>
+          <p></p><a href="https://ca.wikipedia.org/wiki/Catedral_de_Tarragona">Catedral de Tarragona</a></p>
+          <p></p><a href="https://pixabay.com/">pixabay</a></p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
