--- a/src/visitar.html
+++ b/src/visitar.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8"/>
     <title>Visitar</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <script src="../app.js"></script>
-    <script src="../node_modules/lazysizes/lazysizes.min.js" async=""></script>
+    <script async src="../app.js"></script>
+    <script async src="../node_modules/lazysizes/lazysizes.min.js" async=""></script>
   </head>
   <body>
     <header>
       <div class="logodiv">
-        <img class="lazyload logoimg" src="images/logo_png.png" alt="logo empresa">
+        <img class="logoimg" loading="lazy" src="images/logo_png.png" alt="logo empresa">
         <p class="logotext">Tota la informació que necessites al teu abast</p> 
       </div>
       <div class="container">
@@ -19,7 +19,7 @@
           <picture>
             <source media="(max-width: 549px)" srcset="images/tarragona1_ver.jpg" />
             <source media="(min-width: 550px)" srcset="images/tarragona1.jpg" />
-            <img src="images/tarragona1.jpg" alt="catedral" width=100% height="400" />
+            <img src="images/tarragona1.jpg" loading="lazy" alt="catedral" width=100% height="400" />
           </picture>
         </a>
         <!--<a href="index.html"><img class="lazyload" 
@@ -49,7 +49,7 @@
     <main>
       <div class="detall">
           <a href="tarraco.html"><h1>Tarraco</h1></a>
-          <img class="img_detall lazyload animation_small" 
+          <img class="img_detall animation_small"  loading="lazy"
             srcset="images/amfiteatre2.jpg 320w,
             images/amfiteatre2.jpg 480w,
             images/amfiteatre2.jpg 800w"
@@ -61,7 +61,7 @@
       </div>
       <div class="detall">
         <a href="catedral.html"><h1>Catedral</h1></a>
-        <img class="img_detall lazyload animation_small"
+        <img class="img_detall animation_small" loading="lazy"
           srcset="images/catedral.jpg 320w,
           images/catedral.jpg 480w,
           images/catedral.jpg 800w"
@@ -73,7 +73,7 @@
       </div>
       <div class="detall">
         <a href="rambla.html"><h1>Rambla Nova</h1></a>
-        <img class="img_detall lazyload animation_small" 
+        <img class="img_detall animation_small"  loading="lazy"
           srcset="images/barriantic.jpg 320w,
           images/barriantic.jpg 480w,
           images/barriantic.jpg 800w"
@@ -90,7 +90,7 @@
           <p>Treball fet per Genís Pijuan Casanova</p>
           <p>Assignatura de Eines HTML i CSS aula 1</p>
           <p>Professora Mariona Roca Ros</p>
-          <img class="lazyload" src="images/logo_png.png" alt="logo empresa">
+          <img loading="lazy" src="images/logo_png.png" alt="logo empresa">
         </div>
         <div  class="grid-item">
           <p>FONTS D'INFORMACIÓ</p>
