--- a/src/catedral.html
+++ b/src/catedral.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8"/>
     <title>Catedral</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <script src="../app.js"></script>
-    <script src="../node_modules/lazysizes/lazysizes.min.js" async=""></script>
+    <script async src="../app.js"></script>
+    <script async src="../node_modules/lazysizes/lazysizes.min.js" async=""></script>
   </head>
   <body>
     <header>
       <div class="logodiv">
-        <img class="lazyload logoimg" src="images/logo_png.png" alt="logo empresa">
+        <img class="logoimg" loading="lazy" src="images/logo_png.png" alt="logo empresa">
         <p class="logotext">Tota la informació que necessites al teu abast</p> 
       </div>
       <div class="container">
@@ -19,7 +19,7 @@
           <picture>
             <source media="(max-width: 549px)" srcset="images/catedral_ver.jpg" />
             <source media="(min-width: 550px)" srcset="images/catedral.jpg" />
-            <img src="images/catedral.jpg" alt="catedral" width=100% height="400" />
+            <img src="images/catedral.jpg" loading="lazy" alt="catedral" width=100% height="400" />
           </picture></a>
         <button onclick="buttonFunction()" id="btn">Menú</button>
         <nav id="nav">
@@ -40,7 +40,7 @@
     <main>
         <h3>Catedral</h3>
         <div>
-          <img class="lazyload imgCercle" src="images/Catedral1.jpg" alt="Imatge de la catedral desde dalt" height="100" >
+          <img class="imgCercle" loading="lazy" src="images/Catedral1.jpg" alt="Imatge de la catedral desde dalt" height="100" >
           <p class="textautor">Foto de Spolyakov</p>
         </div>
         <p>
@@ -52,7 +52,7 @@
         </p>
         <h4>Que veure</h4>
         <div>
-          <img class="lazyload imgCercle" src="images/Catedral2.jpg" alt="Imatge de la Catedral al fons del carrer" height="100" >
+          <img class="imgCercle" loading="lazy" src="images/Catedral2.jpg" alt="Imatge de la Catedral al fons del carrer" height="100" >
           <p class="textautor">Foto de Bas Linders</p>
         </div>
         <ul class="tarraco_list">
@@ -63,7 +63,7 @@
             <li class="multiline_color">Campanar</li>
         </ul>
         <div class="center_title">
-            <iframe width="100%" height="315" class="lazyload" src="https://www.youtube.com/embed/g5wM5tug5fw" title="Catedral YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+            <iframe width="100%" height="315" src="https://www.youtube.com/embed/g5wM5tug5fw" title="Catedral YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
         </div>
     </main>
     <footer>
@@ -72,7 +72,7 @@
           <p>Treball fet per Genís Pijuan Casanova</p>
           <p>Assignatura de Eines HTML i CSS aula 1</p>
           <p>Professora Mariona Roca Ros</p>
-          <img class="lazyload" src="images/logo_png.png" alt="logo empresa">
+          <img loading="lazy" src="images/logo_png.png" alt="logo empresa">
         </div>
         <div  class="grid-item">
           <p>FONTS D'INFORMACIÓ</p>
