lazy to youtube

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <title>Portada</title>
     <link rel="stylesheet" href="css/styles.css" />
     <script async src="../app.js"></script>
-    <script async src="../node_modules/lazysizes/lazysizes.min.js" async=""></script>
+    <script async src="../node_modules/lazysizes/lazysizes.min.js"></script>
   </head>
   <body>
     <header>
@@ -52,13 +52,13 @@
         Fundada al segle iii aC amb el nom de Tàrraco, té un important port de mar i és el centre del Complex Petroquímic de Tarragona, un dels més importants del sud d'Europa. 
       </p>
       <div>
-        <img class="lazyload imgCercle" loading="lazy" src="images/augustus.jpg" alt="foto de Augustus emperador" height="100" >
+        <img class="imgCercle" loading="lazy" src="images/augustus.jpg" alt="foto de Augustus emperador" height="100" >
         <p class="textautor">Foto de Nemanja Peric en Unsplash</p>
       </div>
       <p>
         Els romans la feren capital de la província Tarraconense, motiu pel qual encara conserva notables restes arqueològiques d'aquesta època que han estat declarades Patrimoni de la Humanitat per la Unesco.
       </p>
-      <div class="video_center"><iframe width="100%" height="315" class="lazyload" src="https://www.youtube.com/embed/0Plv43BSVYg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div> 
+      <div class="video_center"><iframe width="100%" height="315" loading="lazy" src="https://www.youtube.com/embed/0Plv43BSVYg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div> 
       <p>
         La capital ha anat creixent a mesura que han anat passant els anys, sense perdre la històrica rivalitat amb la ciutat de Reus, i això ha fet que s'hagin destinat grans quantitats de diners pel Port de Tarragona, un dels més importants del Mediterrani occidental, actualment un pol d'atracció del tarragonins. La creixent modernització de la ciutat, juntament amb l'evolució demogràfica que ha patit Catalunya en els últims anys, han fet que la ciutat disposi d'importants vies de comunicació amb l'exterior, com el Port, l'Estació de Tren (molt a prop del Barri del Serrallo), el Corredor del Mediterrani, la proximitat amb l'Aeroport de Reus i les carreteres que porten a València i a Barcelona.<br>
         A més, i en part gràcies als propers pols turístics de Salou, Cambrils, La Pineda (Vila-seca), Tamarit, Altafulla, PortAventura i als futurs BCN World i FerrariLand, i al fet de tenir importants vestigis culturals i històrics, es calcula que la ciutat rep, en les èpoques de temporada alta, més de 2 milions de visitants. Això ha comportat una important entrada de diners i una significativa pujada de la popularitat, però sense cap mena de dubte, el fet que el 2017 Tarragona aculli el XXVIII Jocs Mediterranis, aportarà molta importància a la ciutat, a més de grans infraestructures (esportives, comunicatives, etc) i un gran llegat històric.<br>
