--- a/src/rambla.html
+++ b/src/rambla.html
@@ -6,7 +6,7 @@
     <title>Rambla</title>
     <link rel="stylesheet" href="css/styles.css" />
     <script async src="../app.js"></script>
-    <script async src="../node_modules/lazysizes/lazysizes.min.js" async=""></script>
+    <script async src="../node_modules/lazysizes/lazysizes.min.js" ></script>
   </head>
   <body>
     <header>
