--- a/src/historia.html
+++ b/src/historia.html
@@ -18,8 +18,8 @@
         <a href="index.html">
           <picture>
             <source media="(max-width: 549px)" srcset="images/tarragona1_ver.jpg" />
-            <source media="(min-width: 550px)" srcset="images/tarragona1.jpg" />
-            <img src="images/tarragona1.jpg" loading="lazy" alt="catedral" width=100% height="400" />
+            <source media="(min-width: 550px)" srcset="images/tarragona1.avif" />
+            <img src="images/tarragona1.avif" loading="lazy" alt="catedral" width=100% height="400" />
           </picture>
         </a>
         <button onclick="buttonFunction()" id="btn">Menú</button>
