--- a/src/visitar.html
+++ b/src/visitar.html
@@ -18,18 +18,18 @@
         <a href="index.html">
           <picture>
             <source media="(max-width: 549px)" srcset="images/tarragona1_ver.jpg" />
-            <source media="(min-width: 550px)" srcset="images/tarragona1.jpg" />
-            <img src="images/tarragona1.jpg" loading="lazy" alt="catedral" width=100% height="400" />
+            <source media="(min-width: 550px)" srcset="images/tarragona1.avif" />
+            <img src="images/tarragona1.avif" loading="lazy" alt="catedral" width=100% height="400" />
           </picture>
         </a>
         <!--<a href="index.html"><img class="lazyload" 
-          srcset="images/tarragona1.jpg 320w,
-          images/tarragona1.jpg 480w,
-          images/tarragona1.jpg 800w"
+          srcset="images/tarragona1.avif 320w,
+          images/tarragona1.avif 480w,
+          images/tarragona1.avif 800w"
           sizes="(max-width: 320px) 280px,
           (max-width: 480px) 440px,
           800px"
-          src="images/tarragona1.jpg" alt="tarragonaciutat" width=100% height="400"></a>-->
+          src="images/tarragona1.avif" alt="tarragonaciutat" width=100% height="400"></a>-->
         <button onclick="buttonFunction()" id="btn">Menú</button>
         <nav id="nav">
           <ul>
