--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,24 @@
       <div class="container">
         <a href="index.html">
           <picture>
+            <img
+            sizes="(max-width: 1400px) 100vw, 1400px"
+            srcset="
+            images/tarragona1_p5uu5s_c_scalew_200.avif 200w,
+            images/tarragona1_p5uu5s_c_scalew_489.avif 489w,
+            images/tarragona1_p5uu5s_c_scalew_684.avif 684w,
+            images/tarragona1_p5uu5s_c_scalew_922.avif 922w,
+            images/tarragona1_p5uu5s_c_scalew_1147.avif 1147w,
+            images/tarragona1_p5uu5s_c_scalew_1377.avif 1377w,
+            images/tarragona1_p5uu5s_c_scalew_1400.avif 1400w"
+            src="images/tarragona1_p5uu5s_c_scalew_1400.avif" 
+            loading="lazy" alt="Foto de tarragona" width=100% height="400">
+          </picture>
+          <!--<picture>
             <source media="(max-width: 549px)" srcset="images/tarragona1_ver.jpg" />
             <source media="(min-width: 550px)" srcset="images/tarragona1.avif" />
-            <img src="images/tarragona1.avif" loading="lazy" alt="Foto de tarragona" width=100% height="400" />
-          </picture>
+            <img src="images/tarragona1.avif"  width=100% height="400" />
+          </picture>-->
         </a>
         <button onclick="buttonFunction()" id="btn">Menú</button>
         <nav id="nav">
